--- a/styles.css
+++ b/styles.css
@@ -22,7 +22,7 @@ body {
     grid-template-columns: 1fr 4fr;
     grid-template-rows: auto 1fr;
 
-    background-color: rgba(239, 239, 239, 0.85);
+    background-color: #64748b;
 }
 
 header,
@@ -30,7 +30,7 @@ footer,
 nav,
 main,
 aside {
-    padding: 10px;
+    padding: 3rem 5rem 3rem 3rem;
 }
 
 
@@ -42,7 +42,7 @@ nav {
     justify-content: space-between;
     align-items: center;
     grid-area: nav;
-    padding: 1rem 1rem;
+    gap: 10px;
 }
 
 .search-section {
@@ -51,7 +51,7 @@ nav {
     align-items: center;
     width: 50vw;
     height: 5rem;
-    background-color: rgb(254, 251, 247);
+    background-color: #334155;
     border-radius: 10px;
 }
 
@@ -70,13 +70,20 @@ nav {
 
 .profile {
     display: flex;
-    justify-content: start;
+    justify-content: end;
     align-items: center;
     width: 25vw;
     height: 5rem;
-    padding-left: 1rem;
-    background-color: rgb(254, 251, 247);
+    background-color: #334155;
     border-radius: 10px;
+}
+
+.profile div{
+    display: flex;
+    justify-content: end;
+    align-items: center;
+    padding-right: 3rem;
+    gap: 10px;
 }
 
 /* Side Bar Section*/
@@ -88,7 +95,7 @@ aside {
     align-items: center;
     grid-area: aside;
     gap: 3.5rem;
-    background-color: rgb(54, 53, 52);
+    background-color: #1f2937;
 }
 
 aside p {
@@ -116,16 +123,24 @@ ul li {
     display: flex;
     justify-content: start;
     align-items: center;
+    gap: 10px;
 }
 
 ul li a {
     padding: 0;
     margin: 0;
+    color:rgb(164, 163, 164);
 }
 
-ul li svg {
+ul li img {
     padding: 0;
     margin: 0;
+}
+
+#title{
+    font-size: 30px;
+    font-weight: 900;
+    color: rgb(164, 163, 164);
 }
 
 
@@ -142,8 +157,8 @@ main {
         "projects trending"
     ;
     gap: 10px;
-    grid-template-columns: 4fr 1fr;
-    grid-template-rows: 2rem 10rem 2rem 1fr;
+    grid-template-columns: 3fr 1fr;
+    grid-template-rows: 2rem 15rem 2rem 1fr;
     /* overflow: hidden; */
 
     margin: 10px;
@@ -158,25 +173,44 @@ main * {
     display: grid;
     grid-area: projects;
     grid-template-columns: 1fr 1fr;
-    grid-auto-rows: 200px;
+    grid-auto-rows: 300px;
     gap: 5px;
     /* overflow-y: scroll; */
 }
 
 .item {
-    background-color: rgb(252, 252, 252);
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+    background-color: #d1d5db;
     padding: 20px;
-    border: 2px solid rgb(179, 98, 12);
+    border-left: 10px solid #1f2937;
+    width: 100%;
+}
+
+.item-icons div{
+    width: 100%;
+    display: flex;
+    flex-direction: row;
+    justify-content: end;
+    align-items: flex-end;
+    gap: 10px;
+}
+
+.item-content{
+    display: flex;
+    flex-direction: column;
+    gap: 10px;
 }
 
 .announcements {
-    background-color: blueviolet;
+    background-color: #f1f5f9;
     grid-area: announcements;
     padding: 5px;
 }
 
 .trending {
-    background-color: chocolate;
+    background-color: #f1f5f9;
     grid-area: trending;
     padding: 5px;
 }
