--- a/styles.css
+++ b/styles.css
@@ -10,17 +10,20 @@
 body {
     font-family: 'Oswald', sans-serif;
     font-size: 16px;
-    height: 100vh;
-    width: 100vw;
+    height: 100%;
+    overflow-x: hidden;
+}
 
+.admin-container{
+    height: 100vh;
     display: grid;
     grid-template-areas:
         "aside nav"
         "aside main"
     ;
 
-    grid-template-columns: 1fr 4fr;
-    grid-template-rows: auto 1fr;
+    grid-template-columns: 300px 75vw;
+    grid-template-rows: 150px 1fr;
 
     background-color: #64748b;
 }
@@ -28,11 +31,13 @@ body {
 header,
 footer,
 nav,
-main,
 aside {
     padding: 3rem 5rem 3rem 3rem;
 }
 
+main{
+    padding: 3rem 2rem 3rem 3rem;
+}
 
 /*Navigation Section*/
 
@@ -49,7 +54,7 @@ nav {
     display: flex;
     justify-content: start;
     align-items: center;
-    width: 50vw;
+    width: 60%;
     height: 5rem;
     background-color: #334155;
     border-radius: 10px;
@@ -59,20 +64,25 @@ nav {
     display: flex;
     justify-content: center;
     align-items: center;
+    width: 90%;
     gap: 10px;
 }
 
 .search-bar input {
     border-radius: 10px;
     padding-left: 10px;
-    width: 45vw;
+    width: 100%;
+}
+
+#search-image{
+    padding-left: 10px;
 }
 
 .profile {
     display: flex;
     justify-content: end;
     align-items: center;
-    width: 25vw;
+    width: 25%;
     height: 5rem;
     background-color: #334155;
     border-radius: 10px;
@@ -114,7 +124,7 @@ aside div {
 }
 
 aside * {
-    margin-left: 1.5vw;
+    padding-left: 10px;
 }
 
 ul {
@@ -163,11 +173,11 @@ main {
         "projects trending"
     ;
     gap: 10px;
-    grid-template-columns: 3fr 1fr;
+    grid-template-columns: 4fr 1fr;
     grid-template-rows: 2rem 15rem 2rem 1fr;
     /* overflow: hidden; */
 
-    margin: 10px;
+    margin-bottom: 10px;
     overflow-y: scroll;
 }
 
@@ -179,8 +189,8 @@ main * {
     display: grid;
     grid-area: projects;
     grid-template-columns: 1fr 1fr;
-    grid-auto-rows: 300px;
-    gap: 5px;
+    grid-auto-rows: auto;
+    gap: 10px;
     /* overflow-y: scroll; */
 }
 
